# clean-pipelines

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test.yml
misc/: README.md
misc/doc-classification/: README.md
misc/doc-classification/classify-reports/: README.md
misc/doc-classification/classify-reports/label/: Makefile
misc/doc-classification/classify-reports/label/src/: label-og.py  label.py
misc/doc-classification/classify-reports/train/: Makefile  Makefile-grid
misc/doc-classification/classify-reports/train/src/: src.py
misc/doc-classification/classify-reports/train/src/archive/: single-page-grid.py  src-single-page-small.py  src-small.py  src.py
misc/irene-policy-manuals/: LEGACY_README.md  README.md
misc/irene-policy-manuals/code/: label.py  regex.py
misc/mentioned-agencies/: README.md
misc/mentioned-agencies/download/src/: src.ipynb
misc/mentioned-agencies/post-process/src/: eda.ipynb  src.ipynb
misc/post/: README.md
misc/post/clean/src/: src.py
misc/post/eda/src/: eda.ipynb
misc/post/train-data/src/: src.py
misc/post/ts-blocking/src/: src.py
misc/post/ts-features/: Makefile
misc/post/ts-features/src/: src.py
misc/post/ts-train/: Makefile
misc/post/ts-train/src/: src.py
misc/sample/: README.md
misc/sample/src/: concat.ipynb  eda.ipynb  methodology.md
misc/table-extraction/: README.md
misc/table-extraction/src/: src.py
